2008-11-24  Martin Nordholts  <martinn@svn.gnome.org>

	* libgimpwidgets/Makefile.am: Sort entries.

2008-11-22  Sven Neumann  <sven@gimp.org>

	* app/config/gimpconfig-dump.c: removed reference to gimp-remote
	manual page in the generated gimprc manual page.

2008-11-22  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpselection.[ch]: make the entire selection
	API take GimpSelection arguments, not GimpChannel.
	Clean up gimp_selection_load() a bit.

	* app/actions/select-commands.c
	* app/core/gimp-edit.c
	* app/core/gimpdrawable-transform.c
	* app/core/gimpimage-quick-mask.c
	* app/tools/gimpeditselectiontool.c
	* tools/pdbgen/pdb/selection.pdb: add the needed casts.

	* app/pdb/selection-cmds.c: regenerated.

2008-11-22  Sven Neumann  <sven@gimp.org>

	Bug 561899 – GIMP can't save to mounted filesystem if file exists

	* plug-ins/file-uri/uri-backend-gvfs.c (copy_uri): pass the
	G_FILE_COPY_OVERWRITE flag to g_file_copy().

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch]: removed unused methods
	gimp_draw_tool_set_vectors() and gimp_draw_tool_set_transform()
	and related infrastructure.

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpviewrenderervectors.c
	(gimp_view_renderer_vectors_draw): inlined local variables that
	are only used once.

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.c (gimp_draw_tool_real_draw): moved
	vectors drawing to its own function.

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch]: reordered functions to keep those
	that actually draw together.

2008-11-21  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection.c (gimp_projection_get_tiles_at_level)
	cosmetics.

	* app/display/gimpdisplayshell-render.[ch]: added const qualifier.

2008-11-21  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpcolormapeditor.c
	* app/widgets/gimpselectioneditor.c: For consistency, prefix the
	#warning:s with FIXME.
